# AIRA

./: Dockerfile  README.md  aira.service  clean_and_build.sh  deploy_service.sh  docker-compose.yml  install_service.sh  pyproject.toml  requirements.txt
backend/: app.py  cache.py  embedding_pinecone.py  retrieval.py  retrieval_pipeline.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: Chatbot.tsx
frontend/src/lib/: api.ts
