[project]
name = "airac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.2",
    "chromadb>=1.0.20",
    "fastapi>=0.104.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.31",
    "langchain-pinecone>=0.2.11",
    "langgraph>=0.6.6",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "pinecone>=7.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "uvicorn[standard]>=0.24.0",
]
